# Transkribator

./: .gitignore  APPLY-FIX-REMOTE.md  CRASH_FIX_REPORT.md  CURRENT_STATUS.md  FINAL_CORRECTED.txt  FINAL_SETUP.md  FINAL_TEST.txt  FIXES_REPORT.md  IMPROVEMENTS_PLAN.md  INSTALL_GUIDE.md  QUICK_START.md  README.md  README_UPDATE.md  SETUP_COMPLETE.md  SHERPA_ONNX_INTEGRATION_PLAN.md  SHORTCUT_READY.md  SUCCESS_TEST.txt  TRANSCRIBATOR_ICON_REPORT.md  VICTORY_TEST.txt  WHISPER_VS_SHERPA_ANALYSIS.md  build.bat  check-and-fix-remote.ps1  check_pro_shortcut.ps1  check_shortcut.ps1  create_ico.py  create_icon.py  create_shortcut.ps1  create_shortcut.py  create_shortcut_silent.ps1  debug_steps.txt  debug_tuu.txt  debug_uu.txt  diagnose_audio.py  error_output.txt  generate_design_variants.py  main.py  profile_transcription.py  pyproject.toml  refresh_icon_cache.bat  remote_task.md  (+27 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
RemotePackage/: DEPLOY_REMOTE.ps1  INSTALL_AUTOSTART.bat  README.md  SETUP_WINRM.bat  main.py  pyproject.toml
RemotePackage/TranscriberServer/: AUTOSTART_SERVEO_UPDATED.bat  requirements.txt  server.py  transcriber_wrapper.py
RemotePackage/src/: audio_recorder.py  hotkeys.py  main_window.py  mouse_handler.py  transcriber.py
RemotePackage/src/backends/: base.py  podlodka_turbo_backend.py  sherpa_backend.py  whisper_backend.py
TranscriberClient/: README.md  client.py
TranscriberServer/: AUTOSTART_SERVEO_FINAL.bat  AUTOSTART_SERVEO_REMOTE.bat  AUTOSTART_SERVEO_UPDATED.bat  AUTOSTART_TRANSCRIBER_FULL.bat  COMPLETE_AUTOSTART_SETUP.bat  COPY_SRC_TO_SERVER.bat  CREATE_REMOTE_TASK.ps1  EXECUTE_REMOTE_TASK.ps1  FIX_SHERPA.bat  INSTALL_AUTOSTART.ps1  INSTALL_ON_REMOTE_PC.bat  INSTALL_PYTHON.bat  INSTALL_SHERPA_REMOTE.ps1  INSTALL_SHERPA_WINRM.ps1  MANUAL_SHERPA_INSTALL.md  ONE_CLICK_INSTALL.bat  README.md  REMOTE_DEPLOY.ps1  REMOTE_DEPLOY_V2.bat  REMOTE_SETUP.bat  RUN_AUTOSTART_SETUP.bat  SETUP_AUTOSTART.md  SETUP_GUIDE.md  START_SERVER.bat  START_SERVER_BACKGROUND.bat  START_SERVER_REMOTE.ps1  TASK_for_Claude.txt  (+12 more)
(+121 files in other folders)
